- Refactored the wrap and render to use sibling-level header and body sections, so that the semantic-ui attached elements behave correctly.
- Added TOPA notices
- Added the full_project_data source (which has nested json for one-to-many project data things) and refactored the project-view.js to use this instead of the geojson

--- a/docs/tool/css/project.css
+++ b/docs/tool/css/project.css
@@ -115,3 +115,23 @@
 	border-bottom: 1em solid #555555;
 }
 
+
+
+.ui.segment {
+	font-size: 13px;
+}
+.project-data-table {
+
+}
+
+.project-data-table td {
+	padding-right:10px;
+}
+
+.project-data-table td.title {
+	font-weight:bold;
+}
+
+.project-dat-atable td.value {
+	font-weight:normal;
+}
