--- a/docs/tool/css/styles.css
+++ b/docs/tool/css/styles.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+li {
+    list-style-position:inside;
+}
+
 html, body {
     margin: 0;
     padding: 0;
